# call_reminder_frontend

./: .gitignore  backend_call.py  debug.kv  display_image.py  list.py  pyproject.toml  scroll_list_md.py
